--- a/src/main/resources/inspectionDescriptions/DeepBugsBinOperand.html
+++ b/src/main/resources/inspectionDescriptions/DeepBugsBinOperand.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 Reports any binary expression in which
-one of the operands is probably incorrect
+one of the operands is probably incorrect.
 </body>
 </html>
