Edit inspection descriptions. Declare inspection short names explicitly

--- a/js-plugin/src/main/resources/inspectionDescriptions/JSDeepBugsBinOperator.html
+++ b/js-plugin/src/main/resources/inspectionDescriptions/JSDeepBugsBinOperator.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-Reports any potential misuse of
-binary operators.
+The inspection detects misuse of binary operators
 </body>
 </html>
