--- a/py-plugin/src/main/resources/inspectionDescriptions/PyDeepBugsBinOperand.html
+++ b/py-plugin/src/main/resources/inspectionDescriptions/PyDeepBugsBinOperand.html
@@ -1,8 +1,5 @@
 <html>
 <body>
-Reports any function call with
-probably swapped arguments
-(currently supported only for calls
-with two arguments).
+The inspection detects misuse of binary operands (arguments of binary operations)
 </body>
 </html>
