--- a/js-plugin/src/main/resources/inspectionDescriptions/JSDeepBugsBinOperand.html
+++ b/js-plugin/src/main/resources/inspectionDescriptions/JSDeepBugsBinOperand.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-Reports any binary expression in which
-one of the operands is potentially misused.
+The inspection detects misuse of binary operands (arguments of binary operations)
 </body>
 </html>
