--- a/py-plugin/src/main/resources/inspectionDescriptions/PyDeepBugsBinOperator.html
+++ b/py-plugin/src/main/resources/inspectionDescriptions/PyDeepBugsBinOperator.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-Reports any binary expression in which
-one of the operands is potentially misused.
+The inspection detects misuse of binary operators
 </body>
 </html>
